# matrix-creator-malos

./: .drone.yml  .gitmodules  CMakeLists.txt  README.md  README.rst  TODO  matrix-creator-malos.service  matrixio-malos.service
.drone/: slack.tpl
debian/: README.Debian  changelog  control  copyright  matrix-creator-malos.install  matrixio-malos.install  postinst  prerm  rules
docs/: everloop.md  gpio.md  humidity.md  imu.md  lirc.md  pressure.md  servo.md  uv.md
protos/: malos.proto
src/: CMakeLists.txt  TODO  driver_everloop.cpp  driver_everloop.h  driver_gpio.cpp  driver_gpio.h  driver_humidity.cpp  driver_humidity.h  driver_imu.cpp  driver_imu.h  driver_lirc.cpp  driver_lirc.h  driver_manager.cpp  driver_manager.h  driver_micarray_alsa.cpp  driver_micarray_alsa.h  driver_pressure.cpp  driver_pressure.h  driver_servo.cpp  driver_servo.h  driver_uv.cpp  driver_uv.h  driver_zigbee.cpp  driver_zigbee.h  driver_zigbee_bulb.cpp  driver_zigbee_bulb.h  malos.cpp  malos_base.cpp  malos_base.h  malos_matrixio_base.cpp  malos_matrixio_base.h  malos_wishbone_base.cpp  malos_wishbone_base.h  tcp_client.cpp  tcp_client.h  zmq_pull.cpp  zmq_pull.h  zmq_push.cpp  zmq_push.h
src/js_test/: README  TODO.md  package.json  test_doa.js  test_driver_info.js  test_everloop.js  test_gpio.js  test_humidity.js  test_imu.js  test_ir_remote.js  test_mic_array.js  test_micarray.js  test_mics.js  test_pressure.js  test_servo.js  test_uv.js  test_zigbee.js  test_zigbee_bulb.js  test_zigbee_bulb_color.js  test_zigbee_bulb_level.js
src/python_test/: Pipfile  README.md  requirements.txt  test_driver_info.py  test_everloop.py  test_gpio.py  test_gpio_read_write.py  test_humidity.py  test_imu.py  test_pressure.py  test_sensors.py  test_servo.py  test_set_everloop_color.py  test_uv.py  utils.py
